后台初始化完成